--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,14 @@ nav .system{
 .map{
 	height:400px;
 }
+
+@media  screen and (max-width: 760px) {
+	.news>.fl{
+		border-right: 0px;
+		width:100%;
+	}
+	.news>.fr{
+		width:100%;
+		float:left;
+	}
+}
